--- a/languageVR/app/example/views/notecards-list.html
+++ b/languageVR/app/example/views/notecards-list.html
@@ -58,76 +58,90 @@ Go through the notecards in preparation for the virtual reality.
     width: 70px;
   }
 
-   /*the following code is originally by David Walsh, edited by andy roberson*/
-    /* entire container, keeps perspective */
-    .flip-container {
-    	perspective: 1000;
-    }
-    	/* flip the pane when hovered */
-    	.flip-container:hover .flipper, .flip-container.hover .flipper {
-    		transform: rotateY(180deg);
-    	}
-
-    .flip-container, .front, .back {
-    	width: 100%;
-    	height: 200px;
-    }
-
-    /* flip speed goes here */
-    .flipper {
-    	transition: 0.6s;
-    	transform-style: preserve-3d;
-
-    	position: relative;
+  /*the following code is originally by David Walsh, edited by andy roberson*/
+   /* entire container, keeps perspective */
+   .flip-container {
+     -webkit-perspective: 1000;
+    perspective: 1000;
+   }
+    /* flip the pane when hovered */
+    .flip-container:hover .flipper, .flip-container.hover .flipper {
+       -webkit-transform: rotateY(180deg);
+       -moz-transform: rotateY(180deg);
+       -ms-transform: rotateY(180deg);
+       transform: rotateY(180deg);
     }
 
-    /* hide back of pane during swap */
-    .front, .back {
-    	backface-visibility: hidden;
+   .flip-container, .front, .back {
+    width: 100%;
+    height: 200px;
+   }
 
-    	position: absolute;
-    	top: 0;
-    	left: 0;
+   /* flip speed goes here */
+   .flipper {
+    transition: 0.6s;
+     -webkit-transform-style: preserve-3d;
+     -moz-transform-style: preserve-3d;
+     -ms-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+
+    position: relative;
+   }
+
+   /* hide back of pane during swap */
+   .front, .back {
+     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+   }
+
+   /* front pane, placed above back */
+   .front {
+    z-index: 2;
+    /* for firefox 31 */
+     -webkit-transform: rotateY(0deg);
+     -moz-transform: rotateY(0deg);
+     -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+   }
+
+   /* back, initially hidden pane
+   there's a weird error that causes back notecard to be too high on flip... investigate later*/
+   .back {
+     -webkit-transform: rotateY(180deg);
+     -moz-transform: rotateY(180deg);
+     -ms-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+     /*margin-top: -55px;*/
+   }
+
+   .vertical.flip-container {
+    position: relative;
+  }
+
+    .vertical .back {
+      -webkit-transform: rotateX(180deg);
+      -moz-transform: rotateX(180deg);
+      -ms-transform: rotateX(180deg);
+      transform: rotateX(180deg);
     }
 
-    /* front pane, placed above back */
-    .front {
-    	z-index: 2;
-    	/* for firefox 31 */
-    	transform: rotateY(0deg);
+    .vertical.flip-container .flipper {
+      -webkit-transform-origin: 100% 100px; /*half of height*/
+      -moz-transform-origin: 100% 100px;
+      -ms-transform-origin: 100% 100px;
+      transform-origin: 100% 100px;
     }
 
-    /* back, initially hidden pane
-    there's a weird error that causes back notecard to be too high on flip... investigate later*/
-    .back {
-    	transform: rotateY(180deg);
-      /*margin-top: -55px;*/
+
+    .vertical.flip-container:hover .flipper {
+      -webkit-transform: rotateX(-180deg);
+      -moz-transform: rotateX(-180deg);
+      -ms-transform: rotateX(-180deg);
+      transform: rotateX(-180deg);
     }
-
-    .vertical.flip-container {
-			position: relative;
-		}
-
-			.vertical .back {
-				-webkit-transform: rotateX(180deg);
-				-moz-transform: rotateX(180deg);
-				-ms-transform: rotateX(180deg);
-				transform: rotateX(180deg);
-			}
-
-			.vertical.flip-container .flipper {
-				-webkit-transform-origin: 100% 100px; /*half of height*/
-				-moz-transform-origin: 100% 100px;
-				-ms-transform-origin: 100% 100px;
-				transform-origin: 100% 100px;
-			}
-
-
-			.vertical.flip-container:hover .flipper {
-				-webkit-transform: rotateX(-180deg);
-				-moz-transform: rotateX(-180deg);
-				-ms-transform: rotateX(-180deg);
-				transform: rotateX(-180deg);
-			}
 
 </style>
