work in progress audio, notecard flipping, and progress bar

--- a/languageVR/app/example/views/notecards-list.html
+++ b/languageVR/app/example/views/notecards-list.html
@@ -4,7 +4,8 @@
   </super-navbar>
 
 <h2>Level 1 - Animals</h2>
-Go through the notecards in preparation for the virtual reality.
+Go through the notecards in preparation for the virtual reality. Currently, notecard only flips if you switch between
+touching notecard and touching toggle (lol what have i done lol)
 <br><br>
 <div class="notecard">
   <div class="flip-container vertical" ontouchstart="this.classList.toggle('hover');">
@@ -21,6 +22,7 @@ Go through the notecards in preparation for the virtual reality.
 <br>
 <div class="notecard-icons">
   <div class="flip">flip
+    <button onclick="document.querySelector('#flip-toggle').classList.toggle('hover');" class="sexyButton">Toggle Flip</button>
     <div class="super-refresh"></div>
   </div>
 
@@ -65,7 +67,7 @@ Go through the notecards in preparation for the virtual reality.
     perspective: 1000;
    }
     /* flip the pane when hovered */
-    .flip-container:hover .flipper, .flip-container.hover .flipper {
+    .flip-container:hover .flipper {
        -webkit-transform: rotateY(180deg);
        -moz-transform: rotateY(180deg);
        -ms-transform: rotateY(180deg);
