--- a/languageVR/app/example/views/vocab-list.html
+++ b/languageVR/app/example/views/vocab-list.html
@@ -5,11 +5,15 @@
 
 <h2>Level 1 - Animals</h2>
 Review the vocab in preparation for the virtual reality.
-<br>Maybe add functionality for user to HEAR word too?
 <br>
-<br>
+The sound should play a dog bark, but I haven't gotten it to work yet.
+<audio controls>
+<source src="dog-bark.wav" type="audio/wav">
+Your browser does not support the audio element.
+</audio>
 
 <ul class="vocab">
+
   <li>Cat - قط</li>
   <li>Cat - قط</li>
   <li>Cat - قط</li>
