adding lots of stuff parse still doesn't work

--- a/languageVR/app/example/views/vocab-list.html
+++ b/languageVR/app/example/views/vocab-list.html
@@ -3,23 +3,42 @@
     <super-navbar-title ng-bind="navbarTitle"></super-navbar-title>
   </super-navbar>
 
-<h2>Level 1 - Animals</h2>
+<h2>Level 1 - The Kitchen</h2>
 Review the vocab in preparation for the virtual reality.
-<br>
+<!--
 The sound should play a dog bark, but I haven't gotten it to work yet.
 <audio controls>
 <source src="dog-bark.wav" type="audio/wav">
 Your browser does not support the audio element.
-</audio>
-
+</audio>-->
 <ul class="vocab">
 
-  <li>Cat - قط</li>
-  <li>Cat - قط</li>
-  <li>Cat - قط</li>
-  <li>Cat - قط</li>
-  <li>Cat - قط</li>
-  <li>Cat - قط</li>
+  <li>Sink - <span lang="ar">حوض</span></li>
+  <li>Pantry - حجرة المؤن</li>
+  <li>Fridge - ثلاجة</li>
+  <li>Table - الطاولة</li>
+  <li>Chair - كرسي</li>
+  <li>Placemat - مكان حصيرة</li>
+  <li>Tablecloth - غطاء طاولة</li>
+  <li>Napkin - منديل</li>
+  <li>Plate - طبق</li>
+  <li>Cup - كوب</li>
+  <li>Knife - سكين</li>
+  <li>Fork - شوكة</li>
+  <li>Spoon - ملعقة</li>
+  <li>Bowl - عاء</li>
+  <li>Coffee maker - صانع القهوة</li>
+  <li>Microwave - الميكروويف</li>
+  <li>Blender - الخلاط</li>
+  <li>Coffee Mug - القهوة القدح</li>
+  <li>Dish rack - رف طبق</li>
+  <li>Stove - موقد</li>
+  <li>Oven - فرن</li>
+  <li>Pot - قدور</li>
+  <li>Skillet - المقالي</li>
+  <li>Dishwasher - غسالة الأواني</li>
+  <li>Spatula - ملعقة الصيدلي</li>
+  <li>Spice rack - التوابل الرف</li>
 </ul>
 
 </div>
