--- a/languageVR/app/example/views/getting-started.html
+++ b/languageVR/app/example/views/getting-started.html
@@ -1,4 +1,4 @@
-<div class="padding">
+<div class="padding"  ng-controller="FormController">
 
   <super-navbar>
     <super-navbar-title>
@@ -6,7 +6,7 @@
     </super-navbar-title>
   </super-navbar>
 
-  <p class="name"> Name and logo go here</p>
+  <p class="name"> Name and logo go here </p>
 
   <div class="level">
     <div class="level-display">
@@ -25,6 +25,19 @@
   <super-navigate view-id="vocab-list">
     <button class="button button-block button-balanced icon-left super-wand">Resume session</button>
   </super-navigate>
+
+  <form ng-submit="submit()">
+    <button class="button button-block button-positive icon-left super-camera" ng-click="testDataConnection()">Test Data</button>
+
+  <label class="item item-input"><input type="text" ng-model="username" name="username" placeholder="username" /></label>
+  <label class="item item-input"><input type="password" ng-model="password" name="password" placeholder="password"/></label>
+  <label class="item item-input"><input type="text" ng-model="email" name="email" placeholder="email address" /></label>
+<input type="submit" id="submit" value="Submit" />
+
+
+    <button class="button button-block button-positive icon-left super-star" type="submit" id=submit ng-click="createUser()">Create user</button>
+
+</div>
 
   <!--<super-navigate view-id="notecards-list">
     <button class="button button-block button-balanced icon-left super-university">Notecards</button>
