--- a/languageVR/app/example/views/notecards-list.html
+++ b/languageVR/app/example/views/notecards-list.html
@@ -3,7 +3,7 @@
     <super-navbar-title ng-bind="navbarTitle"></super-navbar-title>
   </super-navbar>
 
-<h2>Level 1 - Animals</h2>
+<h2>Level 1 - The Kitchen</h2>
 Go through the notecards in preparation for the virtual reality. Currently, notecard only flips if you switch between
 touching notecard and touching toggle (lol what have i done lol)
 <br><br>
@@ -11,10 +11,10 @@ touching notecard and touching toggle (lol what have i done lol)
   <div class="flip-container vertical" ontouchstart="this.classList.toggle('hover');">
   		<div class="flipper">
   			<div class="front" style="background: orange;">
-  				DOG
+  				Sink
   			</div>
   			<div class="back" style="background:#f8f8f8;">
-  				DOG IN ARABIC
+  				حوض
   			</div>
   		</div>
   	</div>
